--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,6 +67,8 @@
     <script src="js/api/api.js"></script>
     
     <!-- Vue组件定义 - 必须在app.js之前加载 -->
+    <!-- 配方编辑器组件 -->
+    <script src="js/components/formula-editor.js"></script>
     <!-- 定义全局变量: CustomColorsComponent -->
     <script src="js/components/custom-colors.js"></script>
     
