--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,9 +26,8 @@
     <div id="app">
         <div class="main-container">
             <!-- 系统标题 -->
-            <div class="system-header">
-                <h1>叠雕画颜色管理系统</h1>
-                <p>为工厂师傅提供便捷的颜色查阅和配色管理</p>
+            <div class="system-header compact">
+                <h1>STEREOWOOD-梯木叠雕-颜色管理系统</h1>
             </div>
             
             <!-- 主要导航标签页 -->
