--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,7 +38,7 @@
                     <el-tab-pane label="作品配色管理" name="artworks">
                         <artworks-component ref="artworksRef" @view-mode-changed="onArtworksViewMode" :sort-mode="artworksSortMode"></artworks-component>
                     </el-tab-pane>
-                    <el-tab-pane label="颜色原料库" name="mont-marte">
+                    <el-tab-pane label="颜色原料管理" name="mont-marte">
                         <mont-marte-component ref="montMarteRef" :sort-mode="montMarteSortMode"></mont-marte-component>
                     </el-tab-pane>
                 </el-tabs>
