--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,16 +40,17 @@
             ></app-header-bar>
 
             <!-- 全局搜索栏（仅作用于作品/方案） -->
-            <div class="global-search-bar">
+            <!-- 回退阶段暂时移除搜索功能 UI -->
+            <!-- <div class="global-search-bar">
                 <el-input v-model.trim="searchQuery" placeholder="搜索作品编号/名称 或 方案名称" clearable size="large" prefix-icon="Search"></el-input>
-            </div>
+            </div> -->
 
             <div class="main-container">
                 <div v-show="activeTab==='custom-colors'">
                     <custom-colors-component ref="customColorsRef" :sort-mode="customColorsSortMode"></custom-colors-component>
                 </div>
                 <div v-show="activeTab==='artworks'">
-                    <artworks-component ref="artworksRef" :sort-mode="artworksSortMode" :search-query="searchQuery"></artworks-component>
+                    <artworks-component ref="artworksRef" :sort-mode="artworksSortMode"></artworks-component>
                 </div>
                 <div v-show="activeTab==='mont-marte'">
                     <mont-marte-component ref="montMarteRef" :sort-mode="montMarteSortMode"></mont-marte-component>
