--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,9 +31,14 @@
                 :custom-colors-sort-mode="customColorsSortMode"
                 :artworks-sort-mode="artworksSortMode"
                 :mont-marte-sort-mode="montMarteSortMode"
+                :global-search-query="globalSearchQuery"
+                :global-search-results="globalSearchResults"
+                :show-search-dropdown="showSearchDropdown"
                 @update:activetab="val=>setActiveTabPersist(val)"
                 @change-artworks-view-mode="setArtworksViewMode"
                 @change-sort="setSortMode"
+                @global-search-input="handleGlobalSearchInput"
+                @search-select="handleGlobalSearchSelect"
                 @add-artwork="$refs.artworksRef && $refs.artworksRef.addArtwork && $refs.artworksRef.addArtwork()"
                 @add-custom-color="$refs.customColorsRef && $refs.customColorsRef.openAddDialog && $refs.customColorsRef.openAddDialog()"
                 @add-raw-material="$refs.montMarteRef && $refs.montMarteRef.openDialog && $refs.montMarteRef.openDialog()"
