--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,8 @@
     <title>叠雕画颜色管理系统</title>
     
     <!-- 外部依赖库 -->
-    <!-- Vue 3.3.4 - 核心框架 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.3.4/vue.global.min.js"></script>
+    <!-- Vue 3.3.4 - 核心框架 (生产版本) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.3.4/vue.global.prod.min.js"></script>
     
     <!-- Element Plus 2.3.14 - UI组件库 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/element-plus/2.3.14/index.min.css">
