--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,6 +102,8 @@
     <script src="js/components/app-header-bar.js"></script>
     <!-- 配方编辑器组件 -->
     <script src="js/components/formula-editor.js"></script>
+    <!-- 冲突解决组件 -->
+    <script src="js/components/common/ConflictResolver.js"></script>
     <!-- 定义全局变量: CustomColorsComponent -->
     <script src="js/components/custom-colors.js"></script>
     
