--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,8 +19,8 @@
     <!-- Axios 1.4.0 - HTTP请求库 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
     
-    <!-- 项目样式文件 -->
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- 项目样式文件（模块化） -->
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
         <div id="app">
