--- a/frontend/index.html
+++ b/frontend/index.html
@@ -118,6 +118,10 @@
     <!-- 缩略图预览工具 -->
     <script src="js/utils/thumb-preview.js"></script>
     
+    <!-- Utility Scripts (keeping only essentials for small team) -->
+    <script src="js/utils/debounce-throttle.js"></script>
+    <script src="js/utils/performance-monitor.js"></script>
+    
     <!-- 主应用入口 - 必须最后加载 -->
     <!-- 创建Vue应用实例，注册组件，挂载到#app -->
     <script src="js/app.js"></script>
