--- a/frontend/index.html
+++ b/frontend/index.html
@@ -105,6 +105,8 @@
     <script src="js/components/formula-editor.js"></script>
     <!-- 冲突解决组件 -->
     <script src="js/components/common/ConflictResolver.js"></script>
+    <!-- 通用操作按钮组件 - 暂时禁用 -->
+    <!-- <script src="js/components/common/ActionButton.js"></script> -->
     <!-- 定义全局变量: CustomColorsComponent -->
     <script src="js/components/custom-colors.js"></script>
     
