--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,6 +89,10 @@
 
     <!-- 配方解析与哈希 (计算器步骤1) -->
     <script src="js/utils/formula-parser.js"></script>
+    <!-- Shared formula utilities -->
+    <script src="js/utils/formula-utils.js"></script>
+    <!-- Message utility for unified notifications -->
+    <script src="js/utils/message.js"></script>
     <!-- 计算器状态存储模块 (步骤2) -->
     <script src="js/modules/calc-store.js"></script>
     <!-- 配方查重模块 (顺序 + 倍数不敏感) -->
