--- a/frontend/index.html
+++ b/frontend/index.html
@@ -93,6 +93,11 @@
     <script src="js/utils/formula-utils.js"></script>
     <!-- Message utility for unified notifications -->
     <script src="js/utils/message.js"></script>
+    <!-- Color converter utility for RGB/CMYK/HEX conversion -->
+    <script src="js/utils/color-converter.js"></script>
+    <!-- Pantone color database -->
+    <script src="js/data/pantone-colors.js"></script>
+    <script src="js/data/pantone-colors-full.js"></script>
     <!-- 计算器状态存储模块 (步骤2) -->
     <script src="js/modules/calc-store.js"></script>
     <!-- 配方查重模块 (顺序 + 倍数不敏感) -->
