--- a/frontend/index.html
+++ b/frontend/index.html
@@ -129,6 +129,9 @@
     <!-- 缩略图预览工具 -->
     <script src="js/utils/thumb-preview.js"></script>
     
+    <!-- Configuration helper for test/production mode -->
+    <script src="js/utils/config-helper.js"></script>
+    
     <!-- Utility Scripts (keeping only essentials for small team) -->
     <script src="js/utils/debounce-throttle.js"></script>
     <script src="js/utils/performance-monitor.js"></script>
