--- a/frontend/index.html
+++ b/frontend/index.html
@@ -95,6 +95,10 @@
     <script src="js/utils/message.js"></script>
     <!-- Color converter utility for RGB/CMYK/HEX conversion -->
     <script src="js/utils/color-converter.js"></script>
+    <!-- Color conversion utilities for HSL/LAB -->
+    <script src="js/utils/colorConversion.js"></script>
+    <!-- Color distance calculations (Delta E) -->
+    <script src="js/utils/colorDistance.js"></script>
     <!-- Pantone color database -->
     <script src="js/data/pantone-colors.js"></script>
     <script src="js/data/pantone-colors-full.js"></script>
@@ -126,6 +130,8 @@
     <script src="js/components/mont-marte.js"></script>
     <!-- 分类管理组件 -->
     <script src="js/components/category-manager.js"></script>
+    <!-- 高级颜色选择对话框组件 -->
+    <script src="js/components/color-palette-dialog.js"></script>
     <!-- 计算器浮层组件 (步骤3) -->
     <script src="js/components/formula-calculator.js"></script>
     <!-- 缩略图预览工具 -->
