cutsom color list phase 2

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -99,6 +99,8 @@
     <script src="js/utils/colorConversion.js"></script>
     <!-- Color distance calculations (Delta E) -->
     <script src="js/utils/colorDistance.js"></script>
+    <!-- Color mapping utilities for grid and wheel -->
+    <script src="js/utils/colorMapping.js"></script>
     <!-- Pantone color database -->
     <script src="js/data/pantone-colors.js"></script>
     <script src="js/data/pantone-colors-full.js"></script>
