Refactor custom color component layout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -138,6 +138,10 @@
     <script src="js/components/custom-colors/mixins/selection.js"></script>
     <script src="js/components/custom-colors/mixins/media.js"></script>
     <script src="js/components/custom-colors/mixins/duplicates.js"></script>
+    <script src="js/components/custom-colors/ListView.js"></script>
+    <script src="js/components/custom-colors/dialogs/EditColorDialog.js"></script>
+    <script src="js/components/custom-colors/dialogs/DuplicateGroupsDialog.js"></script>
+    <script src="js/components/custom-colors/print.js"></script>
     <!-- 定义全局变量: CustomColorsComponent -->
     <script src="js/components/custom-colors.js"></script>
     
