Refactor palette dialog to reuse dictionary views

--- a/test-color-palette.html
+++ b/test-color-palette.html
@@ -18,6 +18,11 @@
     <!-- Our utilities and components -->
     <script src="frontend/js/utils/color-tools.js"></script>
     <script src="frontend/js/utils/colorDistance.js"></script>
+    <script src="frontend/js/components/color-dictionary/helpers.js"></script>
+    <script src="frontend/js/utils/color-processing.js"></script>
+    <script src="frontend/js/components/color-dictionary/views/list-view.js"></script>
+    <script src="frontend/js/components/color-dictionary/views/hsl-view.js"></script>
+    <script src="frontend/js/components/color-dictionary/views/wheel-view.js"></script>
     <script src="frontend/js/components/color-palette-dialog.js"></script>
     
     <!-- Styles -->
