Refactor artworks component into modular structure

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -103,6 +103,8 @@
     <script src="js/utils/formula-parser.js"></script>
     <!-- Shared formula utilities -->
     <script src="js/utils/formula-utils.js"></script>
+    <!-- Logging utility -->
+    <script src="js/utils/logger.js"></script>
     <!-- Message utility for unified notifications -->
     <script src="js/utils/message.js"></script>
     <!-- Unified color utility toolkit (RGB/HSL/CMYK/LAB conversions + extraction) -->
@@ -144,7 +146,14 @@
     <script src="js/components/custom-colors/print.js"></script>
     <!-- 定义全局变量: CustomColorsComponent -->
     <script src="js/components/custom-colors.js"></script>
-    
+
+    <!-- Artworks component dependencies -->
+    <script src="js/components/artworks/mixins/pagination.js"></script>
+    <script src="js/components/artworks/mixins/highlight.js"></script>
+    <script src="js/components/artworks/mixins/focus.js"></script>
+    <script src="js/components/artworks/ListView.js"></script>
+    <script src="js/components/artworks/dialogs/SchemeEditor.js"></script>
+    <script src="js/components/artworks/dialogs/ArtworkEditor.js"></script>
     <!-- 定义全局变量: ArtworksComponent -->
     <script src="js/components/artworks.js"></script>
     
