Refactor app data and search into composables

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -162,7 +162,7 @@
     
     <!-- 主应用入口 - 必须最后加载 -->
     <!-- 创建Vue应用实例，注册组件，挂载到#app -->
-    <script src="js/app.js"></script>
+    <script type="module" src="js/app.js"></script>
     <script>
         // 永久显示返回顶部按钮，仅处理点击滚动
         (function(){
