--- a/frontend/index.html
+++ b/frontend/index.html
@@ -147,6 +147,10 @@
     <!-- 高级颜色选择对话框组件 -->
     <script src="js/components/color-palette-dialog.js"></script>
     <!-- 自配色字典页面组件 -->
+    <script src="js/components/color-dictionary/color-dictionary-service.js"></script>
+    <script src="js/components/color-dictionary/color-dictionary-list-view.js"></script>
+    <script src="js/components/color-dictionary/color-dictionary-hsl-view.js"></script>
+    <script src="js/components/color-dictionary/color-dictionary-wheel-view.js"></script>
     <script src="js/components/color-dictionary.js"></script>
     <!-- 计算器浮层组件 (步骤3) -->
     <script src="js/components/formula-calculator.js"></script>
