--- a/frontend/index.html
+++ b/frontend/index.html
@@ -151,6 +151,7 @@
     <script src="js/components/color-dictionary/color-dictionary-list-view.js"></script>
     <script src="js/components/color-dictionary/color-dictionary-hsl-view.js"></script>
     <script src="js/components/color-dictionary/color-dictionary-wheel-view.js"></script>
+    <script src="js/components/color-dictionary/color-dictionary-matcher-view.js"></script>
     <script src="js/components/color-dictionary.js"></script>
     <!-- 计算器浮层组件 (步骤3) -->
     <script src="js/components/formula-calculator.js"></script>
