feat: add pure color utility modules

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -107,6 +107,8 @@
     <script src="js/utils/message.js"></script>
     <!-- Color converter utility for RGB/CMYK/HEX conversion -->
     <script src="js/utils/color-converter.js"></script>
+    <script src="js/utils/pure-color-utils.js"></script>
+    <script src="js/utils/custom-color-swatch.js"></script>
     <!-- Color conversion utilities for HSL/LAB -->
     <script src="js/utils/colorConversion.js"></script>
     <!-- Color distance calculations (Delta E) -->
